<resources>
    <string name="app_name">ShopApp</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="letsLogin">Let\'s Login</string>
    <string name="dontHaveAccount">Don\'t have an account? Register now!</string>
    <string name="forgotPassword">I have forgot my password.</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="letsRegister">Let\'s Register</string>
    <string name="haveAccount">Do you have an account? Log in.</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
</resources>