<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tvLetsLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/tvLetsLogin"
            app:layout_constraintEnd_toEndOf="@id/tvLetsLogin"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/quality"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvDontHaveAccount"
            app:layout_constraintStart_toStartOf="@id/tvDontHaveAccount"
            app:layout_constraintEnd_toEndOf="@id/tvDontHaveAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@id/tvDontHaveAccount"
            app:layout_constraintEnd_toEndOf="@id/tvDontHaveAccount"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>